python-minimock (1.2.6-2) UNRELEASED; urgency=low

  * debian/control, debian/rules:
    + Convert to ‘dh_python2’ packaging helper.

 --

python-minimock (1.2.6-1) unstable; urgency=low

  * New upstream version.
    (Closes: bug#614123).
    + Can now change tracker on a mock object after creation.
    + Improve doctest support.
    + Bug fixes.
  * debian/docs, debian/rules:
    + Update documentation filenames to match upstream.
  * debian/source/format:
    + Convert packaging to source format “3.0 (quilt)”.
  * debian/control:
    + Declare “Standards-Version: 3.9.1”. No further changes needed.
    + Specify the ‘VCS-Browser’ URL.
    + Clarify package description.
    + Set “Priority: optional” to allow other common packages to depend on
      this one.

 -- Ben Finney <ben+debian@benfinney.id.au>  Mon, 21 Feb 2011 10:12:29 +1100

python-minimock (1.2.5-1) unstable; urgency=low

  * New upstream version:
    + Deprecate MockTracker. TraceTracker should be used instead.
  * debian/control:
    + Update to ‘Standards-Version: 3.8.2’. No changes required.

 -- Ben Finney <ben+debian@benfinney.id.au>  Fri, 07 Aug 2009 15:06:18 +1000

python-minimock (1.2.3-1) unstable; urgency=low

  * New upstream version.
    + Can now suppress tracking for a Mock instance by specifying
      ‘tracker=None’.
  * debian/control, debian/rules:
    + Switch to ‘python-support’ for Python packaging.
    + Use nicer override handling from later ‘debhelper’ version.

 -- Ben Finney <ben+debian@benfinney.id.au>  Thu, 23 Apr 2009 10:33:44 +1000

python-minimock (1.2.2-1) unstable; urgency=low

  * New upstream version.
    + Refined tracker output checking for irrelevant whitespace
      differences.
    + Documentation structure update.
  * debian/*:
    + Update copyright on Debian packaging.
  * debian/control:
    + ‘Build-Depends: python’ instead of ‘python-dev-all’.
  * debian/rules:
    + Install upstream changelog.
