@@ -2,6 +2,8 @@ python-minimock (1.2.6-2) UNRELEASED; urgency=low
 
   * debian/control, debian/rules:
     + Convert to ‘dh_python2’ packaging helper.
+    + Add recommended build targets.
+    + Increase minimum Debhelper version to support new targets.
 
  --
 
